Apertura del panel y animacion

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
     <div class="heart-container">
-        <div class="heart-shape">
-            <div class="subheart-shape"></div>
+        <div class="heart-subcontainer" id="heart_contain">
+            <div class="heart-shape"></div>
         </div>
-        <h2 class="title_click">Abrir carta</h2>
+
+        <a type="button" id="display_panel"><h2 class="title_click">Poema #18</h2></a>
+
+        <div class="panel-container">
+            <div class="panel_info" id="panel_info"></div>
+        </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
