Transiciones ya funcionan

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <a type="button" id="display_panel"><h2 class="title_click">Poema #18</h2></a>
 
         <div class="panel-container">
-            <div class="panel_info" id="panel_info"></div>
+            <div class="panel_info" id="panel_info">
+                <img src="" alt="" class="foto" id="foto">
+
+                <p id="texto_verso"></p>
+            </div>
         </div>
     </div>
 
