Por fin acabe XD

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
         <div class="heart-subcontainer" id="heart_contain">
             <div class="heart-shape"></div>
         </div>
-
-        <a type="button" id="display_panel"><h2 class="title_click">Poema #18</h2></a>
+        
+        <a type="button" id="display_panel">
+            <h2 class="title_click"><span class="boton_flecha">>></span>Poema #18<span class="boton_flecha"><<</span></h2>
+        </a>
 
         <div class="panel-container">
             <div class="panel_info" id="panel_info">
-                <img src="" alt="" class="foto" id="foto">
+                <div class="foto_container">
+                    <img src="" alt="" class="foto" id="foto">
+                </div>
 
-                <p id="texto_verso"></p>
+                <div class="info_container">
+                    <p id="texto_verso" class="texto_verso"></p>
+                </div>
             </div>
         </div>
     </div>
